Refactor dependency scanning and improve compatibility
Refactored the vulnerability scanning flow to return a list of results instead of using callbacks, simplifying async handling and error reporting. Updated OsvClient to use a cached thread pool for Java 11/17 compatibility. Enhanced DependencyParser to better handle Maven, Gradle, and manual libraries, with improved error handling and deduplication. Updated UI and action classes to use the new scanning API. Also moved pluginIcon.svg to the correct resource directory. Bumped version to 1.1.0.